--- a/hearthstone-frontend/src/index.css
+++ b/hearthstone-frontend/src/index.css
@@ -2,6 +2,10 @@ header img {
     height: 100px;
 }
 
+#cards-display {
+    max-height: 650px;
+}
+
 #cards-display img {
     width: 100%;
     height: 100%;
