--- a/hearthstone-frontend/src/index.css
+++ b/hearthstone-frontend/src/index.css
@@ -10,3 +10,11 @@ header img {
     width: 100%;
     height: 100%;
 }
+
+.active {
+    background-color: #17a2b8!important;
+}
+
+.inactive {
+    background-color: grey;
+}
