--- a/hearthstone-frontend/src/index.css
+++ b/hearthstone-frontend/src/index.css
@@ -23,6 +23,10 @@ header img {
     background-color: grey;
 }
 
+#deck-container {
+    overflow: hidden;
+}
+
 #deck-class {
     height: 50px;
     overflow: hidden;
@@ -43,3 +47,4 @@ header img {
     right: 0px;
     z-index: 1;
 }
+
